@@ -3,7 +3,7 @@
 <form>
 <p><%= submit :foo, :value => 'foo' %></p> <!-- action to call foo_action method -->
 <p><%= submit :bar, :value => 'bar' %></p> <!-- action to call bar_action method -->
-<div><%= hidden :example %></div> <!-- hack to dispatch example -->
+<div><%= hidden :example, :direct => true %></div> <!-- hack to dispatch example -->
 </form>
 
 <h2>2. results</h2>
