@@ -1,3 +1,8 @@
+2007-06-21  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/po.rb: (Gluon::PresentationObject class) import adds
+	name to prefix.
+
 2007-06-20  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/po.rb: (Gluon::PresentationObject class) view_name
